login user completed

--- a/secretServer/src/main/resources/application-prod.yaml
+++ b/secretServer/src/main/resources/application-prod.yaml
@@ -12,3 +12,4 @@ spring:
 bd:
   sp:
     createUser: CALL  secret_server.SP_CREATE_USER(:id,:name,:email,:password,:image,:role,:google);
+    searchUserByEmail: CALL secret_server.SP_SEARCH_USER(:email,:id);
