--- a/secretServer/build.gradle
+++ b/secretServer/build.gradle
@@ -27,8 +27,10 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
     //
     implementation 'mysql:mysql-connector-java:5.1.13'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.6.9'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.7.3'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    //
+    implementation 'org.bitbucket.b_c:jose4j:0.8.0'
 }
 
 tasks.named('test') {
