--- a/secret-app/package.json
+++ b/secret-app/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "bootstrap": "^5.1.3",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.5.2",
